--- a/M6L4/M6L4/Views/Home/Book.cshtml
+++ b/M6L4/M6L4/Views/Home/Book.cshtml
@@ -14,10 +14,19 @@
         <h5>@Model.AuthorFullName</h5>
         <h5>@Model.BooksSold</h5>
         <h5>@Model.ReleaseDate</h5>
-        <div>
-             <textarea rows=5 cols=30 >@Model.Description</textarea>
+        <div style="margin: 20px ">
+        <textarea rows=5 cols=30 >@Model.Description</textarea>
+        <form asp-action="Edit" asp asp-route-id="@Model.Id">
+            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure to delete this record?')">
+                Delete
+            </button>
+        </form>
         </div>
         <h5 class="green">@Model.Price$</h5>
-        <button onclick="location.href = '@Url.Action("BookDelete", "Home", new {id = @Model.Id})'">Delete</button>
-    </div>
+        <form asp-action="Delete" asp-route-id="@Model.Id">
+            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure to delete this record?')">
+                Delete
+            </button>
+        </form>
+   </div>
 </div>
