--- a/M6L4/M6L4/Views/Home/Book.cshtml
+++ b/M6L4/M6L4/Views/Home/Book.cshtml
@@ -16,9 +16,9 @@
         <h5>@Model.ReleaseDate</h5>
         <div style="margin: 20px ">
         <textarea rows=5 cols=30 >@Model.Description</textarea>
-        <form asp-action="Edit" asp asp-route-id="@Model.Id">
+        <form asp-action="Update" asp-route-id="@Model.Id">
             <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure to delete this record?')">
-                Delete
+                Update
             </button>
         </form>
         </div>
