--- a/M6L4/M6L4/Views/Home/Book.cshtml
+++ b/M6L4/M6L4/Views/Home/Book.cshtml
@@ -15,12 +15,30 @@
         <h5>@Model.BooksSold</h5>
         <h5>@Model.ReleaseDate</h5>
         <div style="margin: 20px ">
-        <textarea rows=5 cols=30 >@Model.Description</textarea>
-        <form asp-action="Update" asp-route-id="@Model.Id">
-            <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure to delete this record?')">
-                Update
-            </button>
-        </form>
+
+
+            <form asp-action="Update" asp-controller="Home" asp-route-id="@Model.Id">
+                <p>
+                    <label asp-for="Description">Description</label><br />
+                    <textarea asp-for="Description" rows=7 cols=20></textarea>
+                </p>
+                <p>
+                    <input type="submit" value="Сохранить" />
+                </p>
+            </form>
+
+
+            @*<form asp-action="Update" asp-controller="Home" asp-route-id="@Model.Id">
+                <p>
+                    <label asp-for="Description">Description</label><br />
+                    <text type="text" asp-for="Description" />
+                </p>
+                <p>
+                    <input type="submit" value="Сохранить" />
+                </p>
+            </form>*@
+
+
         </div>
         <h5 class="green">@Model.Price$</h5>
         <form asp-action="Delete" asp-route-id="@Model.Id">
@@ -28,5 +46,5 @@
                 Delete
             </button>
         </form>
-   </div>
+    </div>
 </div>
